--- a/app/src/main/res/layout/fragment_alarm_clock.xml
+++ b/app/src/main/res/layout/fragment_alarm_clock.xml
@@ -14,6 +14,7 @@
         android:datePickerMode="spinner"
         android:visibility="invisible"
         android:background="@color/white"
+        android:elevation="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:timePickerMode="spinner"
         android:visibility="invisible"
         android:background="@color/white"
+        android:elevation="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,27 +45,27 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_date"
-        android:layout_width="250dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         app:backgroundTint="@color/yellow"
         android:text="@string/Set_the_date"
         android:textColor="@color/black"
         android:layout_margin="8dp"
         app:icon="@drawable/ic_baseline_date_range_24"
-        app:iconTint="@color/blakk"
+        app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_singl"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_time"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         app:backgroundTint="@color/yellow"
         android:text="@string/Set_the_time"
         android:textColor="@color/black"
         app:icon="@drawable/ic_baseline_access_time_24"
-        app:iconTint="@color/blakk"
+        app:iconTint="@color/black"
         android:layout_margin="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,14 +74,14 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_st"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="64dp"
         android:text="@string/START"
         android:textColor="@color/black"
         app:backgroundTint="@color/yellow"
         app:icon="@drawable/ic_baseline_access_alarms_24"
-        app:iconTint="@color/blakk"
+        app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -109,7 +111,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_singl"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:backgroundTint="@color/yellow"
