--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -58,7 +58,7 @@
         android:text="@string/add_new_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/my_collor"
+        android:backgroundTint="@color/red"
         app:layout_constraintBottom_toBottomOf="@+id/editText_note"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
