--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -17,14 +17,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_day"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="400dp"
-        android:layout_marginStart="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_return"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_shedule_list"/>
-
+        tools:listitem="@layout/item_shedule_list" />
 
     <Spinner
         android:id="@+id/spin_lesson"
@@ -33,7 +31,9 @@
         android:entries="@array/spinner_items"
         android:layout_margin="16dp"
         android:elevation="16dp"
-        android:background="@color/my_collor"
+        android:background="@color/gray"
+        android:textAlignment="center"
+        android:backgroundTint="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -43,9 +43,11 @@
         android:layout_height="32dp"
         android:layout_margin="16dp"
         android:elevation="16dp"
-        android:background="@color/my_collor"
+        android:background="@color/gray"
         android:entries="@array/id_items"
-        app:layout_constraintBottom_toTopOf="@+id/spin_day"
+        android:textAlignment="center"
+        android:backgroundTint = "@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/spin_lesson"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
@@ -53,10 +55,12 @@
         android:layout_width="250dp"
         android:layout_height="32dp"
         android:layout_margin="16dp"
+        android:background="@color/gray"
         android:elevation="16dp"
         android:entries="@array/day_items"
-        android:background="@color/my_collor"
-        app:layout_constraintBottom_toTopOf="@+id/spin_lesson"
+        android:textAlignment="center"
+        android:backgroundTint="@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/spin_id"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -68,6 +72,4 @@
         app:layout_constraintBottom_toBottomOf="@+id/spin_lesson"
         app:layout_constraintStart_toEndOf="@+id/spin_lesson"
         app:layout_constraintTop_toTopOf="@+id/spin_id" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
