--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -3,25 +3,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
-    android:background="@color/blakk"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textSize="16sp"
+        android:textSize="24sp"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:layout_marginStart="8dp"/>
 
     <TextView
         android:id="@+id/tv_text"
-        android:layout_width="150dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_margin="8dp"
+        android:textSize="24sp"
         android:textColor="@color/white"
         />
 
