--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="red">#D37171</color>
     <color name="ic_launcher_backgroun">#9F3DDC</color>
     <color name="ic_launcher_background">#5F3DDC</color>
-    <color name="blakk">#0B0A09</color>
     <color name="yellow">#F1CC5E</color>
+    <color name="gray">#32C1ABB2</color>
 </resources>
