--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -19,7 +19,7 @@
         android:id="@+id/rv_day"
         android:layout_width="wrap_content"
         android:layout_height="400dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@+id/btn_return"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_shedule_list" />
