--- a/app/src/main/res/layout/fragment_alarm_clock.xml
+++ b/app/src/main/res/layout/fragment_alarm_clock.xml
@@ -50,11 +50,11 @@
         app:backgroundTint="@color/yellow"
         android:text="@string/Set_the_date"
         android:textColor="@color/black"
-        android:layout_margin="8dp"
         app:icon="@drawable/ic_baseline_date_range_24"
         app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_time"
         app:layout_constraintTop_toBottomOf="@+id/btn_singl"/>
 
     <com.google.android.material.button.MaterialButton
@@ -66,9 +66,9 @@
         android:textColor="@color/black"
         app:icon="@drawable/ic_baseline_access_time_24"
         app:iconTint="@color/black"
-        android:layout_margin="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_stop"
         app:layout_constraintTop_toBottomOf="@+id/btn_date" />
 
 
@@ -76,7 +76,7 @@
         android:id="@+id/btn_st"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        app:layout_constraintVertical_chainStyle="packed"
         android:text="@string/START"
         android:textColor="@color/black"
         app:backgroundTint="@color/yellow"
@@ -84,16 +84,17 @@
         app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_tex"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_stop"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_margin="8dp"
-        app:backgroundTint="@color/yellow"
         android:text="@string/STOP"
         android:textColor="@color/black"
+        app:backgroundTint="@color/yellow"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_time" />
@@ -102,10 +103,10 @@
         android:id="@+id/tv_tex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
-        android:layout_margin="8dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_singl"
         app:layout_constraintTop_toBottomOf="@+id/btn_st"
         tools:text="Завтра взять форму" />
 
@@ -113,12 +114,12 @@
         android:id="@+id/btn_singl"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         app:backgroundTint="@color/yellow"
         android:text="@string/singl"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_date"
         app:layout_constraintTop_toBottomOf="@+id/tv_tex" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
