--- a/app/src/main/res/layout/fragment_lesson.xml
+++ b/app/src/main/res/layout/fragment_lesson.xml
@@ -11,13 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lesson_schedule"
-        android:textSize="24dp"
-        android:layout_marginTop="12dp"
-        android:textStyle="bold"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/btn_monday"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_return"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toEndOf="@+id/btn_return"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
@@ -25,7 +25,6 @@
         android:layout_width="66dp"
         android:layout_height="46dp"
         app:backgroundTint="@color/red"
-        android:layout_margin="8dp"
         app:icon="@drawable/ic_baseline_west_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,61 +38,62 @@
         app:cornerRadius="12dp"
         app:backgroundTint="@color/white"
         android:textColor="@color/black"
+        app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_tuesday"
         app:layout_constraintTop_toBottomOf="@+id/tv" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_tuesday"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         app:cornerRadius="12dp"
         android:text="@string/Tuesday"
         app:backgroundTint="@color/white"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_wednesday"
         app:layout_constraintTop_toBottomOf="@+id/btn_monday" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_thursday"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:textColor="@color/black"
         app:cornerRadius="12dp"
         android:text="@string/Thursday"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_friday"
         app:layout_constraintTop_toBottomOf="@+id/btn_wednesday" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_wednesday"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:textColor="@color/black"
         app:cornerRadius="12dp"
         android:text="@string/Wednesday"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_thursday"
         app:layout_constraintTop_toBottomOf="@+id/btn_tuesday" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_friday"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginTop="28dp"
         app:cornerRadius="12dp"
         android:textColor="@color/black"
         android:text="@string/Friday"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_edit"
         app:layout_constraintTop_toBottomOf="@+id/btn_thursday"
         />
 
@@ -101,11 +101,11 @@
         android:id="@+id/btn_edit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:cornerRadius="12dp"
         android:text="@string/Edit"
         android:textColor="@color/black"
         app:backgroundTint="@color/white"
+        app:cornerRadius="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_friday" />
